<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rmal30.lightflip.MainActivity"
    android:orientation="vertical"

    >
    <TextView
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:text="@string/instr"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="20sp"
        />
    <GridView
        android:id="@+id/gridView"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:layout_gravity="center"
        android:foregroundGravity="center"
        android:gravity="center"
        android:stretchMode="none" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2" />

        <SeekBar
            android:id="@+id/seekBar"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:max="6" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="8" />



    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        >
    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" />
    <TextView
        android:id="@+id/txtNumMoves"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"/>

</LinearLayout>
    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="horizontal"
    >

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:text="@string/undo"
        android:id="@+id/btnUndo"
        android:onClick="undoMove"

        />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:text="@string/newp"
        android:onClick="restart"

        />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:text="@string/help"
        android:onClick="showInfo"
        />
    </LinearLayout>
<LinearLayout
    android:id="@+id/google_games"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="horizontal"
    >
    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="showAchievements"
        android:text="@string/achieve" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="showHighScores"
        android:text="@string/highscore" />

    </LinearLayout>
</LinearLayout>
